# KGRAG

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  ADAPTERS_ROADMAP.md  ADAPTER_AUDIT.md  AGENT_PERSPECTIVE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLAUDE_T_IDENTITY.md  Claude.mcp.json  KGRAG_ANALYSIS.md  OPEN_KNOWLEDGE_INSTITUTE_VISION.md  PARTNERSHIP_EXECUTIVE_SUMMARY.md  PITCH_DECK.md  PORTABLE_KNOWLEDGE_VISION.md  README.md  TAGLINES_AND_POSITIONING.md  agent-kg.skill  apply-doc-kg-patches.sh  commit.txt  ode_to_the_knowledge_graph.md  pyproject.toml  release-notes.md  settings.json.template
.claude/: KGRAG_SKILL_MANIFEST.md  METABOG_NAMING_NOTE.md  settings.json
.claude/commands/: bump.md  release.md  setup-kgrag-mcp.md
.claude/skills/codekg/: SKILL.md  clinerules.md
.claude/skills/codekg-thorough-analysis/: SKILL.md
.claude/skills/codekg/references/: CHEATSHEET.md  installation.md
.claude/skills/kgrag/: SKILL.md
.claude/skills/publish/: SKILL.md
.codekg/snapshots/: manifest.json
.dockg/snapshots/: manifest.json
.filetreekg/snapshots/: manifest.json
.github/workflows/: ci.yml
.pycodekg/snapshots/: manifest.json
.runpod/: Dockerfile  hub.json  tests.json
_backing_lib_patches/code_kg/src/code_kg/: __init__.py  snapshots.py
_backing_lib_patches/doc_kg/: pyproject.toml
_backing_lib_patches/doc_kg/src/doc_kg/: snapshots.py
_backing_lib_patches/ftree_kg/src/: snapshots.py
analysis/: KGRAG_analysis_20260314.md  KGRAG_analysis_20260315.md  arch.md  diary_kg_plan.md  doc_kg_analysis_20260314.md  doc_kg_analysis_20260315.md  doc_kg_semantic_20260315.md  filetreekg_analysis.md  kgrag_analysis_20260312.md  kgrag_analysis_20260314.md  kgrag_analysis_20260318.md  kgrag_analysis_20260415.md  kgrag_analysis_20260416.md  kgrag_analysis_20260422.md
articles/: haystacks_to_forests.md  haystacks_to_forests.txt  kgrag.tex  kgrag_medium.md  patent_1_knowledge_compiler.md  patent_application.md  patent_knowledge_compiler.md
articles/patent/: # Patent 1 — Figure Image Generation Pro.litcoffee  patent_1_knowledge_compiler.tex  patent_2_kgrag.md  patent_3_tree_of_knowledge.md
assets/: brands.md
books/: ingest.sh
books/american-literature/: README.md
books/ancient-classical/: README.md
books/english-literature/: README.md
books/fiction/: README.md
books/french-literature/: README.md
books/history/: README.md
books/philosophy/: README.md
books/poetry/: README.md
books/russian-literature/: README.md
books/science/: README.md
books/shakespeare/: README.md
books/spanish/: README.md
docs/: ADAPTERS_ROADMAP.md  ADAPTER_SPEC.md  ADAPTER_STATUS_SPEC.md  AGENTKGKG_IN_CLAUDE_VISION.md  AGENT_KG_DESIGN.md  CI_HOOKS.md  CLI_REFERENCE.md  EMBEDDER_CENTRALIZATION.md  EMBEDDER_HANDOFF.md  FEATURES.md  FLUX_FRONTIERS_ORG_README.md  IMPACT.md  INSTALLATION.md  KG_BUILDER_VERSION_SPEC.md  MANIFESTO.md  MCP.md  METABOKG_SNAPSHOT_REFACTOR.md  PATENT_APPLICATION.md  PATENT_APPLICATION.tex  PATENT_CIP_TEMPORAL.tex  PITCH_DECK.md  PRODUCT_MODEL.md  RASPBERRY_PI_QUERY_DESIGN.md  README.md  SEMANTIC_CHUNKING.md  SNAPSHOT_REFACTOR.md  STACK_ACTIVATION.md  STOICS_VS_RUSSIANS.md  THE_FOREST_VISION.md  TREE_VISUALIZER_PLAN.md  TROUBLESHOOTING.md  USAGE.md  USE_CASES.md  VISION.md  cwd-anchor-fix.md  haystacks_to_forests.md  haystacks_to_forests.tex  logo-design-brief.md  shared-model-cache.md
docs/manifold_walker_spec/: manifold_walker_spec.tex
docs/stack/: agent_kg.md  diary_kg.md  doc_kg.md  ftree_kg.md  memory_kg.md  metabo_kg.md  pycode_kg.md
local/: .env.example  chat.py  docker-compose.yml  handler.py
patches/: README.md
patches/doc_kg/: 0001-feat-add-semantic-corpus-analysis-command-dockg-sema.patch  PATCH_MANIFEST.md  embedder-nomic.patch
patents/embedder_patent/: PATENT_APPLICATION.md  PATENT_CIP_TEMPORAL.tex
patents/haystack_patent/: # Patent 1 — Figure Image Generation Pro.litcoffee  patent_1_knowledge_compiler.bib  patent_1_knowledge_compiler.tex  patent_1_provisional.docx  patent_1_spec.docx  patent_2_kgrag.md  patent_4_agentkg.md
pepys/: diary_transformer.py  hindsight_analysis.py  topics.yaml
pepys/diary_kg/: cli.py  kg.py
pepys/diary_transformer/: cli.py  models.py  transformer.py
runpod/: .env.example  DEPLOY.md  Dockerfile  README.md  build_image.sh  build_kg.py  build_volume.sh  docker-compose.yml  endpoint_env.txt  handler.py  push_indices.sh  rebuild_indices.sh  requirements.txt  setup_volume.sh  test_local.py
scripts/: apply-patches.sh  install-kgs.sh  install-skill.sh  process_logo.py  test_llama_build.py  test_llama_embed.py  textkg_analysis.py
src/agent_kg/: __init__.py  assemble.py  graph.py  profile.py  prune.py  schema.py  session.py  store.py  summarize.py
src/agent_kg/cli/: main.py
src/agent_kg/mcp/: server.py
src/agent_kg/nlp/: __init__.py  entities.py  intent.py  topics.py
src/kg_rag/: __init__.py  _embedders.py  app.py  config.py  corpus_registry.py  embed.py  mcp_server.py  model_coordinator.py  orchestrator.py  person_registry.py  primitives.py  registry.py  snapshots.py  viz.py  viz_qt.py
src/kg_rag/adapters/: __init__.py  _stub_adapter.py  agent_adapter.py  base.py  codekg_adapter.py  diary_adapter.py  disulfide_adapter.py  dockg_adapter.py  ftree_adapter.py  gutenberg_adapter.py  ia_adapter.py  legal_adapter.py  memory_adapter.py  metakg_adapter.py  pdbfile_adapter.py  person_adapter.py  pycodekg_adaptor.py  verse_adapter.py
src/kg_rag/cli/: __init__.py  cmd_analyze.py  cmd_corpus.py  cmd_corpus_io.py  cmd_health.py  cmd_hooks.py  cmd_init.py  cmd_mcp.py  cmd_models.py  cmd_query.py  cmd_registry.py  cmd_synthesize.py  cmd_viz.py  cmd_viz2d.py  group.py  main.py  options.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_cmd_corpus_io.py  test_cmd_health.py  test_cmd_query.py  test_cmd_synthesize.py  test_config.py  test_corpus_registry.py  test_model_coordinator.py  test_orchestrator.py  test_primitives.py  test_registry.py  test_snapshots.py
