# kgrag - Knowledge Graph Builder for Python Codebases
#
# kgrag is a tool that builds searchable knowledge graphs from Python repositories.
# It analyzes Python code to extract semantic relationships between modules, classes,
# functions, and methods, creating a comprehensive graph representation that can be
# queried using natural language.
#
# Key Features:
# - AST-based code analysis with semantic understanding
# - Support for multiple storage backends (SQLite, LanceDB)
# - Natural language querying capabilities
# - Code snippet extraction and visualization
# - MCP (Model Context Protocol) server integration
# - Streamlit-based web interface for exploration
#
# The tool is designed for developers who want to understand large codebases,
# perform code analysis, or build AI-powered development tools.
#
# Author: Eric G. Suchanek, PhD
# Last Revision: 2026-04-30 09:27:04
#
# Quick install (poetry) — recommended
# -------------------------------------
#   poetry install                               core orchestrator only
#   poetry install --extras "kg"                 core + all KG adapters (doc, code, diary, memory, agent, ftree, metabo)
#   poetry install --extras "viz"                core + 2D visualization (streamlit, pyvis, plotly)
#   poetry install --extras "viz3d"              core + 3D visualization (pyvista, pyvistaqt, PyQt5)
#   poetry install --extras "pi"                 core + llama-cpp-python (Raspberry Pi / local LLM)
#   poetry install --extras "kg viz" --with dev  KG adapters + viz + dev tools
#   poetry install --all-extras --with dev       everything
#
# Quick install (pip)
# -------------------
#   pip install -e "."                           core only
#   pip install -e ".[kg]"                       core + all KG adapters
#   pip install -e ".[viz]"                      core + 2D visualization
#   pip install -e ".[kg,viz]"                   KG adapters + 2D visualization
#
# Run tests
# ---------
#   pytest                                       uses [tool.pytest.ini_options]
#
# MCP server
# ----------
#   kgrag-mcp                                    start the KGRAG MCP server
#
# Build KG indices (run inside each repo after code changes)
# -----------------------------------------------------------
#   pycodekg build --repo .                      rebuild code KG
#   dockg build --repo .                         rebuild doc KG
#   memorykg build                               rebuild memory KG


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kg-rag"
version = "0.6.0"
description = "Orchestration layer for the KGRAG(tm) components."
authors = ["Eric G. Suchanek, PhD <suchanek@flux-frontiers.com>"]
license = "Elastic-2.0"
readme = "README.md"
homepage = "https://github.com/Flux-Frontiers/kg_rag"
repository = "https://github.com/Flux-Frontiers/kg_rag"
keywords = ["knowledge-graph", "code-analysis", "ast", "lancedb", "sqlite", "semantic-search", "kgrag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [
  { include = "kg_rag", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
lancedb = ">=0.29.0"
numpy = ">=1.24.0"
# personal agent

# from personal_agent
transformers = "^4.57.6"
sentence-transformers = "^5.2.0"
safetensors = "^0.5.0"

torch = ">=2.5.1"
streamlit = { version = ">=1.35.0", optional = true }
pyvis = { version = ">=0.3.2", optional = true }
pandas = ">=2.0.0"
rich = "^14.3.3"
click = ">=8.1.0"
mcp = ">=1.0.0"
plotly = { version = ">=5.14.0", optional = true }
pyvista = { version = ">=0.44.0", extras = ["jupyter"], optional = true }
pyvistaqt = { version = ">=0.11.0", optional = true }
PyQt5 = { version = ">=5.15.0", optional = true }
param = { version = ">=2.0.0", optional = true }
markdown = { version = ">=3.6", optional = true }
trame-vtk = { version = ">=2.0.0", optional = true }
pip = "^26.0.1"
spacy = {version = ">=3.7.0", optional = true}
llama-cpp-python = { version = ">=0.3.0", optional = true }


# our own adaptors
kgmodule-utils = ">=0.2.0"
pycode-kg = {version = ">=0.18.1", optional=true}
doc-kg = {version = ">=0.12.3", optional=true}
ftree-kg = {version = ">=0.8.0", optional=true}
jupyter-server = ">=2.18.0"
mistune = ">=3.2.1"


[tool.poetry.extras]
viz = ["streamlit", "pyvis", "plotly"]
viz2d = ["PyQt5"]
qt = ["PyQt5"]
viz3d = ["pyvista", "pyvistaqt", "PyQt5", "param", "markdown", "trame-vtk"]
kg = ["pycode-kg", "ftree-kg", "doc-kg"]
pi = ["llama-cpp-python"]

[tool.poetry.group.qt]
optional = true

[tool.poetry.group.qt.dependencies]
PyQt5 = ">=5.15.0"

[tool.poetry.group.viz3d]
optional = true

[tool.poetry.group.viz3d.dependencies]
pyvista = { version = ">=0.44.0", extras = ["jupyter"] }
pyvistaqt = ">=0.11.0"
PyQt5 = ">=5.15.0"
param = ">=2.0.0"
markdown = ">=3.6"
trame-vtk = ">=2.0.0"

[tool.poetry.group.kgdeps]
optional = true

[tool.poetry.group.kgdeps.dependencies]
agent-kg = {git = "https://github.com/Flux-Frontiers/agent_kg.git"}
diary-kg = {git = "https://github.com/Flux-Frontiers/diary_kg.git"}
metabo-kg = {git = "https://github.com/Flux-Frontiers/metabo_kg.git"}
memory-kg = {git = "https://github.com/Flux-Frontiers/memory_kg.git"}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"
pre-commit = "^4.5.1"
detect-secrets = "^1.5.0"
pylint = "^4.0.5"
pdoc = ">=14.0.0"
pip-audit = "^2.10.0"


[tool.poetry.scripts]
kgrag              = "kg_rag.cli.main:cli"
kgrag-mcp          = "kg_rag.mcp_server:main"
kgrag-register     = "kg_rag.cli.cmd_registry:register"
kgrag-unregister   = "kg_rag.cli.cmd_registry:unregister"
kgrag-list         = "kg_rag.cli.cmd_registry:list_kgs"
kgrag-info         = "kg_rag.cli.cmd_registry:info"
kgrag-status       = "kg_rag.cli.cmd_registry:status"
kgrag-init         = "kg_rag.cli.cmd_init:init"
kgrag-scan         = "kg_rag.cli.cmd_registry:scan"
kgrag-query        = "kg_rag.cli.cmd_query:query"
kgrag-pack         = "kg_rag.cli.cmd_query:pack"
kgrag-analyze      = "kg_rag.cli.cmd_analyze:analyze"
kgrag-viz          = "kg_rag.cli.cmd_viz:viz"
kgrag-viz2d        = "kg_rag.cli.cmd_viz2d:viz2d"

[tool.pylint.messages_control]
disable = ["all"]
enable = [
    "cyclic-import",           # R0401
    "broad-exception-caught",  # W0718
    "cell-var-from-loop",      # W0640
    "undefined-variable",      # E0602
    "import-outside-toplevel", # C0415
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.pycodekg]
# Directories to include in the knowledge graph build and analysis.
# When unset, all directories are indexed.
include = ["src"]
# Directories to exclude at every depth during the file walk.
# Combined with the built-in SKIP_DIRS (.git, .venv, __pycache__, etc.).
# exclude = ["tests", "benchmarks"]

[tool.dockg]
# Exclude directories from the knowledge graph by default.
exclude = ["bundles", "dist", "books"]

[tool.filetreekg]
# Exclude directories from the knowledge graph by default.
exclude = ["bundles", "dist", "books"]

[tool.memorykg]
# Claude_T self-knowledge corpus — architecture, identity, and stack docs.
# Built with: memorykg build --source docs/ --extra CLAUDE_T_IDENTITY.md,CLAUDE.md,README.md
# Registered with: kgrag register --name claude_t_self --path .memorykg/
source = ["docs"]
extra = ["CLAUDE_T_IDENTITY.md", "CLAUDE.md", "README.md", "PORTABLE_KNOWLEDGE_VISION.md", "AGENT_PERSPECTIVE.md"]
output = ".memorykg"
corpus_name = "claude_t_self"

[tool.poe.tasks.docs]
help = "Generate project documentation and user guide PDFs"
sequence = [
  { shell = "cd src && pdoc --o ../docs --logo ./logo.png kgrag_kg" },
]

[tool.poe.tasks.wiki]
help = "Generate and publish GitHub wiki from docs/"
cmd = "python scripts/generate_wiki.py"

[tool.poe.tasks.wiki-preview]
help = "Preview wiki generation without publishing"
cmd = "python scripts/generate_wiki.py --dry-run"

[tool.kgrag]
embed_backend = "sentence_transformers"
# st_model = "default"  # resolves to BAAI/bge-small-en-v1.5; override with any alias or HF repo id
