# DocKG - Knowledge Graph Builder for Markdown and Text Documents
#
# DocKG builds a semantically searchable knowledge graph from .md and .txt files.
# It chunks text semantically, embeds the chunks, discovers relations (edges),
# and supports hybrid graph+vector querying — the same architecture as CodeKG
# but for natural-language documents instead of Python source code.
#
# Author: Eric G. Suchanek, PhD

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "doc-kg"
version = "0.4.1"
description = "A tool to build a semantically searchable knowledge graph from markdown and text documents"
authors = ["Eric G. Suchanek, PhD <suchanek@mac.com>"]
license = "Elastic-2.0"
readme = "README.md"
homepage = "https://github.com/Flux-Frontiers/doc_kg"
repository = "https://github.com/Flux-Frontiers/doc_kg"
keywords = ["knowledge-graph", "document-analysis", "markdown", "lancedb", "sqlite", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "doc_kg", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
lancedb = ">=0.29.0"
numpy = ">=1.24.0"
sentence-transformers = ">=2.7.0"
pandas = ">=2.0.0"
rich = ">=13.0.0"
click = ">=8.1.0"
pyyaml = ">=6.0.0"
mcp = ">=1.0.0"
markdown-it-py = ">=3.0.0"


[tool.poetry.extras]
viz = ["streamlit", "pyvis", "plotly"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"
types-pyyaml = "^6.0.12.20250915"
pre-commit = "^4.5.1"
pylint = "^4.0.5"
code-kg = { git = "https://github.com/Flux-Frontiers/code_kg.git" }
ftree-kg = { git = "https://github.com/Flux-Frontiers/FTree_kg.git" }
kg-rag = { path = "/home/user/KGRAG", develop = true }

[tool.poetry.scripts]
dockg          = "doc_kg.cli.main:cli"
dockg-snapshot = "doc_kg.cli.cmd_snapshot:snapshot"
dockg-mcp      = "doc_kg.mcp_server:main"
dockg-build    = "doc_kg.cli.cmd_build:build"
dockg-build-graph = "doc_kg.cli.cmd_build:build_graph"
dockg-build-index = "doc_kg.cli.cmd_build:build_index"
dockg-query    = "doc_kg.cli.cmd_query:query"
dockg-pack     = "doc_kg.cli.cmd_query:pack"
dockg-analyze  = "doc_kg.cli.cmd_analyze:analyze"
dockg-viz      = "doc_kg.cli.cmd_viz:viz"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.dockg]
# Add extra directories to exclude beyond the built-in SKIP_DIRS.
# SKIP_DIRS already covers: .dockg, .git, .venv, venv, __pycache__, node_modules, etc.
# Example: exclude = ["archive", "vendor", "generated"]

[tool.codekg]
# Exclude test directories from the knowledge graph.
# Tests skew architectural metrics (fan-in, public API surface, docstring coverage)
exclude = ["tests"]
include = ["src"]

[tool.pylint.design]
max-args = 20
max-positional-arguments = 20
max-locals = 60
max-attributes = 25
max-branches = 25
max-statements = 80
min-public-methods = 1

[tool.pylint.format]
max-line-length = 120

[tool.pylint.similarities]
ignore-imports = true

[tool.pylint.messages_control]
disable = [
    "duplicate-code",
    "protected-access",
    "global-statement",
    "broad-exception-caught",
]
